<resources>
    <string name="app_name">BeeMusical</string>
    <string name="start_button">btn</string>
    <string name="image1">image</string>
    <string name="start_button_five">start_button_five</string>
    <string name="start_button_four">start_button_four</string>
    <string name="start_button_three">start_button_three</string>
    <string name="start_button_two">start_button_two</string>
    <string name="start_button_one">start_button_one</string>
</resources>